--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
             "homepage": "https://skyraptor.eu/"
         }
     ],
+    "require": {
+        "php": ">= 7.4"
+    },
     "autoload": {
         "psr-4": {
             "SkyRaptor\\DensityWaves\\": "src/"
